--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&family=Itim&display=swap"
         rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <style>
         body {
             font-family: 'Dosis', sans-serif;
@@ -23,7 +24,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
         <div class="flex-1">
             <a class="btn btn-ghost text-xl">Project</a>
         </div>
@@ -46,14 +47,15 @@
 
     <!--PIC-->
     <div class="flex flex-col justify-center items-center mt-10">
-        <h1 class="mb-5 text-3xl text-secondary">โครงงานส่วนบุคคล FUNDAMENTAL WEB PROGRAMMING</h1>
+        <h1 class="mb-5 text-3xl text-secondary headline">โครงงานส่วนบุคคล FUNDAMENTAL WEB PROGRAMMING</h1>
         <img src="asset/WEB TECH.gif" alt="" class="rounded-lg">
     </div>
 
     <div class="flex flex-col justify-center items-center mt-10">
-        <h1 class="mb-5 text-3xl text-accent">เทคโนโลยีต่างๆที่เกี่ยวกับการเขียนโปรแกรมเว็ป</h1>
+        <h1 class="mb-5 text-3xl text-accent body_center">เทคโนโลยีต่างๆที่เกี่ยวกับการเขียนโปรแกรมเว็ป</h1>
     </div>
 
+    <!--CARD-->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-5">
         <div class="card lg:card-side bg-neutral-content shadow-xl mb-5 text-black">
             <figure><img src="https://daisyui.com/images/stock/photo-1494232410401-ad00d5433cfa.jpg" alt="Album" />
@@ -122,6 +124,7 @@
             </div>
         </div>
     </div>
+    
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
         <aside class="items-center grid-flow-col">
             <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
@@ -133,8 +136,9 @@
             <p>Copyright © 2024 - All right reserved</p>
         </aside>
         <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
-            <a href="https://github.com/Earth123456789" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg"
-                    width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+            <a href="https://github.com/Earth123456789" target="_blank" rel="noopener"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
                     <path
                         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
                 </svg></path></a>
