--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
             <p>Copyright © 2024 - All right reserved</p>
         </aside>
         <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
-            <a href="https://github.com/Earth123456789" target="_blank" rel="noopener"><svg
+            <a href="https://github.com/Earth123456789/WEB_PERSONAL" target="_blank" rel="noopener"><svg
                     xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
                     viewBox="0 0 16 16">
                     <path
