--- a/src/svelte.html
+++ b/src/svelte.html
@@ -9,10 +9,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <style>
+        
+    </style>
 </head>
 
 <body>
-    <script src="script.js"></script>
+
+    <script></script>
 </body>
 
 </html>
