--- a/javascript.html
+++ b/javascript.html
@@ -9,6 +9,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&family=Itim&family=Saira+Condensed:wght@500&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&family=Saira+Condensed:wght@500&family=Sriracha&display=swap"
+        rel="stylesheet">
+
+
+    <style>
+        body {
+            font-family: 'Dosis', sans-serif;
+            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Itim', cursive;
+            font-family: 'Saira Condensed', sans-serif;
+            font-family: 'Dosis', sans-serif;
+            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Saira Condensed', sans-serif;
+            font-family: 'Sriracha', cursive;
+
+        }
+    </style>
 </head>
 
 <body>
