--- a/svelte.html
+++ b/svelte.html
@@ -9,14 +9,193 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&family=Itim&family=Saira+Condensed:wght@500&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&family=Saira+Condensed:wght@500&family=Sriracha&display=swap"
+        rel="stylesheet">
+
+
     <style>
-        
+        * {
+            font-family: 'Dosis', sans-serif;
+            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Itim', cursive;
+            font-family: 'Saira Condensed', sans-serif;
+            font-family: 'Dosis', sans-serif;
+            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Saira Condensed', sans-serif;
+            font-family: 'Sriracha', cursive;
+        }
     </style>
 </head>
 
 <body>
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+        <div class="flex-1">
+            <a href="index.html" class="btn btn-ghost text-xl">Project</a>
+        </div>
+        <div class="flex-none mx-5">
+            <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    class="inline-block w-5 h-5 stroke-current">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
+                    </path>
+                </svg>
+                <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
+                    <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
+                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                    <li><a href=" References.html">References</a></li>
+                </ul>
+            </button>
+        </div>
+    </nav>
+    <div class="flex flex-col justify-center items-center mt-10">
+        <img src="asset/svelte 2.jpg" class="pic rounded-lg" alt="" width="1000" height="1000">
+    </div>
+    <div class="m-7">
+        <h1 class="text-3xl">What is Svelte ?</h1>
+        <div class="m-4">
+            <p class="text-xl">” I can confidently say that Svelte has been the easiest JavaScript component library to
+                learn and start putting
+                to use in a productive way “</p>
 
-    <script></script>
+            <p class="text-base">Jeff Delaney, from Svelte Realtime Todo List with Firebase</p>
+        </div>
+        <h1 class="text-3xl">Svelte คืออะไร ?</h1>
+        <div class="m-4">
+            <ul>
+                <li>เป็น Frontend Framework (จริงๆ คือเป็น Compiler) สำหรับทำ UI คล้ายๆ กับ React หรือ Vue</li>
+                <li>ปกติ React จะใช้ DOM drifting แต่ตัว Svelte จะอัพเดทเมื่อ state เปลี่ยน</li>
+                <li>ดูมีความคล้ายคลึงกับ Vue มากกว่า เช่นมีการแบ่งแยก <code
+                        class="bg-neutral-content text-black rounded-lg">&lt;script&gt;</code> และ <code
+                        class="bg-neutral-content text-black rounded-lg">&lt;style&gt;</code> และ markup / template
+                    ที่คล้ายกับ Vue SPC (Single Page Component)</li>
+                <li>รองรับ Reactivity เหมือนกับ Vue</li>
+            </ul>
+        </div>
+        <h1 class="text-3xl">Svelte: เฟรมเวิร์คที่ไม่ใช่เฟรมเวิร์ค เพราะมันคือคอมไพเลอร์</h1>
+        <div class="m-4">
+            <p class="text-xl">Rich Harris นักพัฒนาที่อาชีพหลักเป็นฝ่ายกราฟิกแบบอินเทอร์แอคทีฟของหนังสือพิมพ์ The New
+                York Times (ปัจจุบันก็ยังเป็นอยู่ ผลงาน) มีแนวคิดว่าเฟรมเวิร์คสำหรับงาน frontend แบบ React
+                มีส่วนที่สิ้นเปลือง (overhead) เยอะเกินไป แม้เว็บเฟรมเวิร์คที่มีขนาดไฟล์ประมาณ 100KB อาจเล็กกว่าไฟล์ภาพ
+                JPG เพียงไฟล์เดียว แต่นอกจากค่าแบนด์วิดท์ส่งข้อมูล ค่าสตอเรจ แล้วยังต้องสิ้นเปลืองพลังของเบราว์เซอร์ด้วย
+                (Virtual DOM is pure overhead)
+
+                เขาจึงมีแนวคิด frameworks without the framework
+                แทนที่เราจะสร้างเฟรมเวิร์คเพื่อซ่อนความซับซ้อนของโค้ดจาวาสคริปต์ตอนเขียน (ตอนเขียนง่ายขึ้น
+                โดยเฟรมเวิร์คจัดการงานที่ซับซ้อนให้ตอนรันไทม์) ก็เปลี่ยนมาเป็นการแปลงโค้ด (compile)
+                ให้เสร็จเรียบร้อยก่อนนำไปรัน (แปลงจากโค้ดที่เขียนง่ายเป็น Vanilla JS จาวาสคริปต์แบบปกติ)
+                แล้วนำไปรันในเบราว์เซอร์ได้เลยจะดีกว่า
+
+                แนวคิดนี้กลายเป็น Svelte ที่กระบวนการเขียนโค้ดไม่ต่างจาก React มากนัก แต่แทนที่จะให้เฟรมเวิร์ค (React)
+                นำโค้ดไปแปลงในเบราว์เซอร์ตอนรันไทม์ให้มี overhead ซะเปล่าๆ ก็คอมไพล์ก่อนใช้ให้เสร็จก่อน
+                ได้โค้ดจาวาสคริปต์ธรรมดาที่ machine optimized แล้วไปให้เบราว์เซอร์ใช้ต่อแทน
+
+                ผลคือขนาดไฟล์ที่ใช้งานเล็กลง (Svelte ไม่ต้องพ่วงไฟล์ของตัวมันไปด้วย เพราะออกมาเป็นโค้ดที่แปลงแล้ว)
+                เหลือเพียงหลักไม่กี่ KB เมื่อบีบอัดแล้ว (React + ReactDOM ขนาดรวมกันประมาณ 45KB) อีกทั้งทำงานได้เร็วกว่า
+                เพราะมันคือจาวาสคริปต์ธรรมดาๆ</p>
+
+            <div class="flex flex-col justify-center items-center mt-10 mb-7">
+                <img src="asset/svelte vs react.png" class="pic rounded-lg" alt="" width="1000" height="1000">
+            </div>
+            <h1 class="text-3xl">3 สิ่งที่ทำให้ Svelte แตกต่าง</h1>
+            <div class="m-4">
+                <h2 class="text-2xl">1. Flexible and write less code</h2>
+                <p class="text-base">Svelte เป็น Compiler นั่นหมายความว่า code ในไฟล์ Svelte จะถูกแปลงจาก Hybrid
+                    language ที่ผสมระหว่าง HTML, CSS, JavaScript ให้เป็น lower-level optimize file แทน
+                    ซึ่งมันจะคล้ายกับวิธีคอมไฟล์ C# เป็น bytecode แต่ Svelte จะผสมทั้ง 3 ภาษาเข้าด้วยกัน
+                    นั่นทำให้การเขียน code มีความยืดหยุ่นมากขึ้น รวมทั้งยังเป็นประโยชน์ต่อเว็บเบราว์เซอร์อีกด้วย
+                    นอกจากความยืดหยุ่นในการเขียน code แล้ว Svelte ยังมีเป้าหมายในการลดจำนวน code ที่เขียนลงด้วย
+                    ยกตัวอย่างเช่น code บวกเลขข้างล่างของ 3 framework ทั้ง React, Vue และ Svelte</p>
+            </div>
+            <div class="flex flex-col justify-center items-center mt-6 mb-3">
+                <img src="asset/less_code.jpg" class="pic rounded-lg" alt="" width="500" height="500">
+            </div>
+            <div class="m-4">
+                <h2 class="text-2xl">2. No virtual DOM</h2>
+                <p class="text-base">DOM(Document Object Model) คือ interface ที่กำหนดโครงสร้างของเว็บไซต์ มันจะนำ HTML
+                    มาเปลี่ยนเป็นโครงสร้างที่สามารถจัดการและเข้าถึงได้ ในส่วนของ Virtual DOM จะเป็นการเพิ่ม concept
+                    ในการจำลอง DOM ขึ้นมาในหน่วยความจำและนำมาใช้ในการอัพเดต DOM เฉพาะจุดที่เปลี่ยนแปลงเมื่อ state
+                    ในแอพพลิเคชั่นมีการเปลี่ยนแปลง เมื่อสร้าง Virtual DOM แล้วจะรวมตัวกับ DOM และแสดงผลออกมาเป็น User
+                    Interface ที่เราเห็นกัน
+
+                    ในอดีต 6 - 7 ปีก่อน Vitrual DOM ถือว่าเป็นเทคโนโลยีใหม่ที่มีความเร็วสูงมาก
+                    แต่ปัจจุบันเว็บไซต์มีการพัฒนาที่มากขึ้นทำให้เกิดผลกระทบของ DOM
+                    ที่ซ้ำกันในหน่วยความจำซึ่งจะส่งผลให้ประสิทธิภาพการทำงานแย่ลงได้แต่ Svelte มีแนวทางที่แตกต่างออกไป
+                    นั่นคือการไม่ใช้ Virtual DOM นั่นทำให้แอพพลิเคชั่นมีประสิทธิภาพที่ดีขึ้นอีกด้วย</p>
+            </div>
+            <div class="flex flex-col justify-center items-center mt-6 mb-6">
+                <img src="asset/DOM.png" class="pic rounded-lg" alt="" width="500" height="400">
+            </div>
+            <div class="m-4">
+                <h2 class="text-2xl">3. CSS scope</h2>
+                <p class="text-base">ความแตกต่างระหว่าง CSS ใน Svelte และ CSS ใน framework อื่นๆคือ Svelte จะนำ CSS
+                    จากแต่ละ component มาแบ่งให้เป็น CSS แต่ละไฟล์ในช่วงระหว่าง build ยกตัวอย่างเช่นใน React
+                    จะเป็นการจัดเรียงแต่ละ component ทั้ง markup และ JavaScript ส่วน Svelte จะเป็นการรวบรวมแทนทั้ง
+                    markup และ JavaScript ให้อยู่ใน”.svelte” ไฟล์เดียว ซึ่งจะคล้ายกับ Vue
+
+                    Svelte จะสร้างชื่อ class ที่ไม่ซ้ำกันขณะที่ compile เพื่อสร้างความแน่ใจว่า style แต่ละ element
+                    จะไม่เกิดความขัดแย้งซึ่งกันและกัน นั่นแสดงว่าเพื่อนๆสามารถที่จะใช้ selector โดยไม่จำเป็นโยงกับ class
+                    name อีก</p>
+            </div>
+            <div class="flex flex-col justify-center items-center mt-6 mb-3">
+                <img src="asset/CSS.png" class="pic rounded-lg" alt="" width="500" height="500">
+            </div>
+            <div class="m-4">
+            <h1 class="text-3xl">Introduction</h1>
+            <div class="m-4">
+                <h2 class="text-2xl">Start a new project</h2>
+                <p class="text-base">Svelte เป็น Compiler นั่นหมายความว่า code ในไฟล์ Svelte จะถูกแปลงจาก Hybrid
+                    language ที่ผสมระหว่าง HTML, CSS, JavaScript ให้เป็น lower-level optimize file แทน
+                    ซึ่งมันจะคล้ายกับวิธีคอมไฟล์ C# เป็น bytecode แต่ Svelte จะผสมทั้ง 3 ภาษาเข้าด้วยกัน
+                    นั่นทำให้การเขียน code มีความยืดหยุ่นมากขึ้น รวมทั้งยังเป็นประโยชน์ต่อเว็บเบราว์เซอร์อีกด้วย
+                    นอกจากความยืดหยุ่นในการเขียน code แล้ว Svelte ยังมีเป้าหมายในการลดจำนวน code ที่เขียนลงด้วย
+                    ยกตัวอย่างเช่น code บวกเลขข้างล่างของ 3 framework ทั้ง React, Vue และ Svelte</p>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <footer class="footer items-center p-4 bg-neutral text-neutral-content">
+        <aside class="items-center grid-flow-col">
+            <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+                clip-rule="evenodd" class="fill-current">
+                <path
+                    d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+                </path>
+            </svg>
+            <p>Copyright © 2024 - All right reserved</p>
+        </aside>
+        <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+            <a href="https://github.com/Earth123456789/WEB_PERSONAL" target="_blank" rel="noopener"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                </svg></path></a>
+        </nav>
+    </footer>
+    <script>
+        function toggleMenu() {
+            let menu = document.getElementById("menu");
+            menu.classList.toggle("hidden");
+        }
+        function animation() {
+            ScrollReveal().reveal('.headline', { delay: 850 });
+            gsap.from(".pic", {
+                opacity: 0,
+                y: 100,
+                duration: 2
+            });
+        }
+        animation();
+
+    </script>
 </body>
 
 </html>
