--- a/svelte.html
+++ b/svelte.html
@@ -147,17 +147,25 @@
                 <img src="asset/CSS.png" class="pic rounded-lg" alt="" width="500" height="500">
             </div>
             <div class="m-4">
-            <h1 class="text-3xl">Introduction</h1>
-            <div class="m-4">
-                <h2 class="text-2xl">Start a new project</h2>
-                <p class="text-base">Svelte เป็น Compiler นั่นหมายความว่า code ในไฟล์ Svelte จะถูกแปลงจาก Hybrid
-                    language ที่ผสมระหว่าง HTML, CSS, JavaScript ให้เป็น lower-level optimize file แทน
-                    ซึ่งมันจะคล้ายกับวิธีคอมไฟล์ C# เป็น bytecode แต่ Svelte จะผสมทั้ง 3 ภาษาเข้าด้วยกัน
-                    นั่นทำให้การเขียน code มีความยืดหยุ่นมากขึ้น รวมทั้งยังเป็นประโยชน์ต่อเว็บเบราว์เซอร์อีกด้วย
-                    นอกจากความยืดหยุ่นในการเขียน code แล้ว Svelte ยังมีเป้าหมายในการลดจำนวน code ที่เขียนลงด้วย
-                    ยกตัวอย่างเช่น code บวกเลขข้างล่างของ 3 framework ทั้ง React, Vue และ Svelte</p>
+                <h1 class="text-3xl">Introduction</h1>
+                <div class="m-4">
+                    <h2 class="text-2xl">Start a new project</h2>
+                    <p class="text-base">นามสกุลของไฟล์ จะเป็น .svelte เช่น <code
+                            class="bg-neutral-content text-black rounded-lg">App.svelte</code> มองเป็น <code
+                            class="bg-neutral-content text-black rounded-lg">Component</code></p>
+                    <p class="text-base">รูปแบบของไฟล์ svelte จะแบ่งเป็น <code
+                            class="bg-neutral-content text-black rounded-lg">&lt;script&gt;</code>, markup และ <code
+                            class="bg-neutral-content text-black rounded-lg">&lt;style&gt;</code> ในไฟล์เดียว</p>
+                    <pre class="bg-neutral-content rounded-lg mt-3">
+                        <code>
+
+                        </code>
+                </pre>
+
+                </div>
+
             </div>
-        </div>
+
         </div>
     </div>
 
