--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="synthwave">
+<html lang="en" data-theme="business">
 
 <head>
     <meta charset="UTF-8">
@@ -33,12 +33,12 @@
         <div class="flex-none mx-5">
             <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    class="inline-block w-5 h-5 stroke-current">
+                    class="inline-block w-5 h-5 stroke-current ">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
                     </path>
                 </svg>
-                <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
+                <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-30 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
                             target="_blank" ">เอกสาร (เนื้อหา)</a></li>
                     <li><a href=" References.html">References</a></li>
@@ -49,7 +49,7 @@
 
     <!--PIC-->
     <div class="flex flex-col justify-center items-center mt-10">
-        <h1 class="mb-5 text-3xl text-secondary headline">โครงงานส่วนบุคคล FUNDAMENTAL WEB PROGRAMMING</h1>
+        <h1 class="mb-5 text-3xl text-success headline">โครงงานส่วนบุคคล FUNDAMENTAL WEB PROGRAMMING</h1>
         <img src="asset/WEB TECH.gif" alt="" class="rounded-lg pic">
     </div>
 
