--- a/svelte.html
+++ b/svelte.html
@@ -68,14 +68,14 @@
         </div>
         <h1 class="text-3xl text-accent">Svelte คืออะไร ?</h1>
         <div class="m-4">
-            <ul>
-                <li>เป็น Frontend Framework (จริงๆ คือเป็น Compiler) สำหรับทำ UI คล้ายๆ กับ React หรือ Vue</li>
-                <li>ปกติ React จะใช้ DOM drifting แต่ตัว Svelte จะอัพเดทเมื่อ state เปลี่ยน</li>
-                <li>ดูมีความคล้ายคลึงกับ Vue มากกว่า เช่นมีการแบ่งแยก <code
+            <ul class="list-disc pl-5 mt-2">
+                <li class="mb-2">เป็น Frontend Framework (จริงๆ คือเป็น Compiler) สำหรับทำ UI คล้ายๆ กับ React หรือ Vue</li>
+                <li class="mb-2">ปกติ React จะใช้ DOM drifting แต่ตัว Svelte จะอัพเดทเมื่อ state เปลี่ยน</li>
+                <li class="mb-2">ดูมีความคล้ายคลึงกับ Vue มากกว่า เช่นมีการแบ่งแยก <code
                         class="bg-neutral-content text-black rounded-lg">&lt;script&gt;</code> และ <code
                         class="bg-neutral-content text-black rounded-lg">&lt;style&gt;</code> และ markup / template
                     ที่คล้ายกับ Vue SPC (Single Page Component)</li>
-                <li>รองรับ Reactivity เหมือนกับ Vue</li>
+                <li class="mb-2">รองรับ Reactivity เหมือนกับ Vue</li>
             </ul>
         </div>
         <h1 class="text-3xl text-accent">Svelte: เฟรมเวิร์คที่ไม่ใช่เฟรมเวิร์ค เพราะมันคือคอมไพเลอร์</h1>
