--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="card lg:card-side bg-neutral-content shadow-xl mb-5 text-black">
-            <figure><img class="p-5" src="asset/tailwind.jpg" alt="Album" />
+            <figure><img class="p-5" src="asset/tailwindcss.png" alt="Album" />
             </figure>
             <div class="card-body">
                 <h2 class="card-title">Tailwind</h2>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="card lg:card-side bg-neutral-content shadow-xl mb-5 text-black">
-            <figure><img class="p-5" src="asset/python.jpg" alt="Album" />
+            <figure><img class="p-5" src="asset/python-.webp" alt="Album" />
             </figure>
             <div class="card-body">
                 <h2 class="card-title">Python</h2>
