--- a/python.html
+++ b/python.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="synthwave">
+<html lang="en" data-theme="business">
 
 <head>
     <meta charset="UTF-8">
