--- a/tailwind.html
+++ b/tailwind.html
@@ -102,7 +102,18 @@
                 style.src.css
             </p>
         </div>
-        <iframe src="https://codepen.io/Vipat-Choknantawong/pen/dyrJdMo" width="100%" height="600" frameborder="0"></iframe>
+        <h1 class="text-3xl text-info">Get started with Tailwind CSS</h1>
+        <div class="m-4">
+            <p class="text-xl">Tailwind CSS works by scanning all of your HTML files, JavaScript components, and any
+                other templates for class names, generating the corresponding styles and then writing them to a static
+                CSS file.
+
+                It's fast, flexible, and reliable — with zero-runtime.
+            </p>
+        </div>
+        <div class="flex flex-col justify-center items-center m-10">
+            <iframe class="test_2'" src="https://play.tailwindcss.com/" width="100%" height="400" frameborder="0"></iframe>
+        </div>
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
         <aside class="items-center grid-flow-col">
@@ -137,6 +148,7 @@
                 y: 100,
                 duration: 2
             });
+            
         }
         animation();
     </script>
